<resources>
    <string name="app_name">Dementia Cognition Screen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_next">Next</string>

    <string name="java_permission_write_storage">Export data to the phone memory</string>
    <string name="java_permission_record_audio">Record patient\'s answers</string>

    <string name="name">Name</string>
    <string name="age">DOB</string>
    <string name="enter_details_of_the_patient">Enter details of the patient</string>
    <string name="username">Username</string>
    <string name="id">ID</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="java_input_name">Enter the patient\'s name</string>
    <string name="java_input_age">Enter the patient\'s age</string>
    <string name="java_input_id">Enter the patient\'s id</string>
    <string name="java_input_sex">Enter the patient\'s Sex</string>

    <string name="module_00">Practice Task</string>
    <string name="practice_task">Practice Task</string>
    <string name="picture_naming">Picture Naming</string>
    <string name="picture_pointing">Picture Pointing</string>
    <string name="word_learning">Word Learning</string>
    <string name="orientation">Orientation</string>
    <string name="figure_copy">Figure Copy</string>
    <string name="trails">Trails</string>
    <string name="rule_finding">Rule Finding</string>
    <string name="verbal_memory">Verbal Memory</string>
    <string name="episodic_memory">Episodic Memory</string>
    <string name="attention">Attention</string>

    <string-array name="module_names">
        <item>@string/picture_naming</item>
        <item>@string/picture_pointing</item>
        <item>@string/word_learning</item>
        <item>@string/orientation</item>
        <item>@string/figure_copy</item>
        <item>@string/trails</item>
        <item>@string/rule_finding</item>
        <item>@string/verbal_memory</item>
        <item>@string/episodic_memory</item>
        <item>@string/attention</item>
    </string-array>

    <string name="module_03_word1">Bicycle</string>
    <string name="module_03_word2">Mist</string>
    <string name="module_03_word3">Wardrobe</string>
    <string name="module_03_word4">Teacher</string>
    <string name="module_03_word5">Rectangle</string>

    <string name="module_04_question1">What is the year we are in now?</string>
    <string name="module_04_question2">Can you tell me the month?</string>
    <string name="module_04_question3">What is the date today?</string>
    <string name="module_04_question4">Who is the current Chief Executive?</string>

    <string name="module_08_mcq1_word1">Bus</string>
    <string name="module_08_mcq1_word2">Motorbike</string>
    <string name="module_08_mcq1_word3">Bicycle</string>
    <string name="module_08_mcq1_word4">Cart</string>

    <string name="module_08_mcq2_word1">Fog</string>
    <string name="module_08_mcq2_word2">Storm</string>
    <string name="module_08_mcq2_word3">Drizzle</string>
    <string name="module_08_mcq2_word4">Mist</string>

    <string name="module_08_mcq3_word1">Wardrobe</string>
    <string name="module_08_mcq3_word2">Setee/sofa</string>
    <string name="module_08_mcq3_word3">Cupboard</string>
    <string name="module_08_mcq3_word4">Table</string>

    <string name="module_08_mcq4_word1">Doctor</string>
    <string name="module_08_mcq4_word2">Teacher</string>
    <string name="module_08_mcq4_word3">Cook</string>
    <string name="module_08_mcq4_word4">Nurse</string>

    <string name="module_08_mcq5_word1">Circle</string>
    <string name="module_08_mcq5_word2">Rectangle</string>
    <string name="module_08_mcq5_word3">Triangle</string>
    <string name="module_08_mcq5_word4">Square</string>

    <string name="java_task0_question">Tap on the circles!</string>
    <string name="java_task1_question">What\'s in the picture?</string>
    <string name="java_task2_question1">In these 4 pictures, which one is a duck?</string>
    <string name="java_task2_question2">In these 4 pictures, which one is grapes?</string>
    <string name="java_task2_question3">In these 4 pictures, which one is a bird?</string>
    <string name="java_task2_question4">In these 4 pictures, which one is a vegetable?</string>
    <string name="java_task3_question">Remember these 5 words and repeat them.</string>
    <string name="java_task4_question">Answer the following questions.</string>
    <string name="java_task5_question">Copy the Figure in the canvas below.</string>
    <string name="java_task6_question1">Connect the circles going from small to large.</string>
    <string name="java_task6_question2">Connect the squares going from large to small.</string>
    <string name="java_task6_question3_1">Alternate between the shapes.\n</string>
    <string name="java_task6_question3_2">From the largest square to the smallest circle, then to the next largest square to the next smallest circle.\n</string>
    <string name="java_task6_question3_3">Continue through all the shapes.\n</string>
    <string name="java_task7_question">Guess where the dot may go next.</string>
    <string name="java_task8_question">Which of the words do you remember?</string>
    <string name="java_task9_question">In these 4 pictures, which one do you remember from before?</string>
    <string name="java_task10_question1">Tap on blue button for correct and yellow button for wrong</string>
    <string name="java_task10_question2">Is this word one of the target words?</string>
</resources>
